## Process this file with automake to produce Makefile.in

xkbdir = $(KEYMAP_PATH)
nobase_xkb_DATA = \
	aliases \
	ataritt \
	fujitsu \
	ibm \
	sun \
	xfree98 \
	amiga \
	evdev \
	hp \
	macintosh \
	macosx \
	sony \
	xfree86 \
	empty \
	digital_vndr/lk \
	digital_vndr/pc \
	sgi_vndr/indigo \
	sgi_vndr/indy \
	sgi_vndr/iris

EXTRA_DIST = $(nobase_xkb_DATA) xkb.pl

